# washday

./: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh  production_data.py
washday/: manage.py
washday/core/utils/: collections.py  misc.py  settings.py
washday/main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
washday/main/migrations/: 0001_initial.py
washday/main/static/assets/css/: style.css
washday/main/static/assets/js/: main.js
washday/main/static/assets/timeline/css/: style.css
washday/main/static/assets1/css/scss/: main.scss
washday/main/static/myassets/js/: main.js  washday_repeat.js
washday/main/templates/main/: index.html  inner-page.html  pages-login.html  pages-register.html  portfolio-details.html  timeline.html
washday/main/templates/main/client_dashboard/: base.html  components-tabs.html  forms-elements.html  index.html  layout.html  pages-bag.html  pages-blank.html  pages-contact.html  pages-error-404.html  pages-login.html  pages-register.html  users-profile.html
washday/project/: urls.py
washday/project/settings/: __init__.py  base.py  custom.py  envvars.py
washday/project/settings/templates/: settings.dev.py
